# vecxl

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake
src/: vecxl.cc
tools/: hel.cc  joy.cc
